<resources>
    <string name="app_name">막내의 Secret 회식 노트</string>
    <string name="action_settings">Settings</string>
    <string name="market_name">이름</string>
    <string name="market_loc">주소</string>
    <string name="market_pref">선호도</string>
    <string name="market_cnt">방문 횟수</string>
    <string name="market_type">카테고리</string>
    <string name="market_coment">코멘트</string>
    <string name="market_tel">전화번호</string>
    <string name="update">수정</string>
    <string name="delete">삭제</string>
    <string name="complete">완료</string>
    <string name="exit">취소</string>
    <string name="input">입력</string>


</resources>
