<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:src="@drawable/chinese"
        android:id="@+id/market_image"
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <LinearLayout
        android:paddingLeft="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/radius_corner_item"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <TextView
            android:textSize="30dp"
            android:id="@+id/market_name"
            android:text="@string/market_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/market_loc"
            android:text="@string/market_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/market_tel"
            android:text="@string/market_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/market_type"
            android:text="@string/market_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/market_cnt"
            android:text="@string/market_cnt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:paddingLeft="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/radius_corner_item"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <TextView
            android:textSize="25dp"
            android:id="@+id/market_pref_tag"
            android:text="@string/market_pref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <!--카드뷰-->

            <RatingBar
                android:layout_gravity="center"
                android:layout_weight="2"
                android:id="@+id/market_pref"
                android:theme="@style/CustomRatingBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="3"
                android:stepSize="1"
                android:max="5" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:paddingLeft="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/radius_corner_item"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <TextView
            android:textSize="25dp"
            android:id="@+id/market_coment_tag"
            android:text="@string/market_coment"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/market_coment"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:text="@string/update"
            android:id="@+id/update"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <Button
            android:text="@string/delete"
            android:id="@+id/delete"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />


    </LinearLayout>

</LinearLayout>