<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:src="@drawable/defaultimage"
        android:id="@+id/market_image"
        android:layout_weight="35"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="center"
        android:adjustViewBounds="true"/>

    <LinearLayout
        android:paddingLeft="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/radius_corner_item"
        android:layout_weight="45"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/market_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/market_name"
            android:textSize="30dp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/market_loc"
            android:text="@string/market_loc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/market_tel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20dp"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/market_tel"
                android:text="@string/market_tel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:autoLink="all"
                android:textSize="20dp"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <TextView
            android:id="@+id/market_type"
            android:text="@string/market_type"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                android:text="@string/market_cnt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="20dp"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/market_cnt"
                android:text="@string/market_cnt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:autoLink="all"
                android:textSize="20dp"
                android:gravity="center_vertical"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:paddingLeft="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/radius_corner_item"
        android:layout_weight="20"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <TextView
            android:textSize="25dp"
            android:id="@+id/market_pref_tag"
            android:text="@string/market_pref"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:gravity="center">

            <Spinner
                android:gravity="center"
                android:id="@+id/pref_cate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <RatingBar
                android:id="@+id/market_pref"
                android:theme="@style/CustomRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="3"
                android:stepSize="1"
                android:max="5"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:paddingLeft="10dp"
        android:layout_margin="5dp"
        android:background="@drawable/radius_corner_item"
        android:layout_weight="20"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <TextView
            android:textSize="25dp"
            android:id="@+id/market_coment_tag"
            android:text="@string/market_coment"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/market_coment"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="15dp"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/update"
            android:id="@+id/update"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <Button
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/delete"
            android:id="@+id/delete"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>