<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/radius_corner_item"
    android:layout_margin="7dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:padding="5dp"
        android:id="@+id/market_thumb"
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:src="@drawable/people"/>

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_weight="5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/market_type"
                android:layout_marginRight="4dp"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/people"/>
            <TextView
                android:layout_weight="5"
                android:singleLine="true"
                android:id="@+id/market_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/market_name"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="30dp"/>
        </LinearLayout>



        <TextView
            android:singleLine="true"
            android:id="@+id/market_cnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/market_cnt"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="15dp"/>

        <RatingBar
            android:id="@+id/market_pref"
            style="?android:attr/ratingBarStyleSmall"
            android:theme="@style/CustomRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="3"
            android:stepSize="1"
            android:max="5" />

        <TextView
            android:singleLine="true"
            android:id="@+id/market_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/market_loc"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="15dp"/>


    </LinearLayout>

</LinearLayout>