<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_weight="45"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:src="@drawable/defaultimage"
            android:id="@+id/market_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"/>

        <Button
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/camera"
            android:id="@+id/camera"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/market_image"
            android:layout_alignRight="@id/market_image"/>

        <Button
            android:id="@+id/album"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/album"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/market_image"
            android:layout_toLeftOf="@id/camera"
            />

    </RelativeLayout>

    <ScrollView
        android:layout_weight="85"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:paddingLeft="10dp"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:background="@drawable/radius_corner_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/market_name"
                        android:layout_width="0dp"
                        android:layout_weight="10"
                        android:layout_height="wrap_content"
                        android:hint="@string/market_name"
                        android:textSize="30dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_vertical"/>

                    <Button
                        android:gravity="center"
                        android:adjustViewBounds="true"
                        android:background="@drawable/map"
                        android:id="@+id/map_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        />

                </LinearLayout>



                <EditText
                    android:id="@+id/market_loc"
                    android:hint="@string/market_loc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:text="@string/market_tel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="20dp"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/market_tel"
                        android:hint="@string/market_tel"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:textSize="20dp"
                        android:gravity="center_vertical"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <Spinner
                        android:id="@+id/market_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20dp"
                        android:gravity="center_vertical"/>

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:text="@string/market_cnt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:textSize="20dp"
                        android:gravity="center_vertical"/>

                    <TextView
                        android:id="@+id/market_cnt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textSize="20dp"
                        android:gravity="center"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2">

                        <Button
                            android:id="@+id/up"
                            android:background="@drawable/up"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="30dp" />

                        <Button
                            android:id="@+id/down"
                            android:background="@drawable/down"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="30dp" />

                    </LinearLayout>

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout"
                android:paddingLeft="10dp"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:background="@drawable/radius_corner_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textSize="25dp"
                    android:id="@+id/market_pref_tag"
                    android:text="@string/market_pref"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:hint="@string/input"
                        android:gravity="center"
                        android:id="@+id/pref_cate"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="match_parent" />

                    <RatingBar
                        style="?android:attr/ratingBarStyleIndicator"
                        android:id="@+id/market_pref"
                        android:theme="@style/CustomRatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="false"
                        android:numStars="5"
                        android:rating="3"
                        android:stepSize="1"
                        android:max="5"
                        android:gravity="center"/>

                    <Button
                        android:layout_margin="10dp"
                        android:background="@drawable/plus_red"
                        android:id="@+id/add_cate"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:gravity="center"
                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:paddingLeft="10dp"
                android:layout_margin="5dp"
                android:padding="10dp"
                android:background="@drawable/radius_corner_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textSize="25dp"
                    android:id="@+id/market_coment_tag"
                    android:text="@string/market_coment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/market_coment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:maxLines="4"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>